--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "svelte": "Transition.svelte",
   "repository": {
     "type": "git",
-    "url": "git://https://github.com/gawlk/svelte-class-transition.git"
+    "url": "git+https://github.com/gawlk/svelte-class-transition.git"
   },
   "keywords": [
     "transition",
@@ -25,8 +25,5 @@
   "homepage": "https://github.com/gawlk/svelte-class-transition#readme",
   "peerDependencies": {
     "svelte": "^3.21.0"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
   }
 }
